@@ -34,18 +34,18 @@
 char * credit_text[] = {
   "-TUX, OF MATH COMMAND",  /* '-' at beginning makes highlighted: */
   "COPYRIGHT 2001-2006",
-  "",
+  " ",
   "PART OF THE 'TUX4KIDS' PROJECT",
-  "",
+  " ",
   "-DESIGNED BY",
   "SAM 'CRISWELL' HART",
-  "",
+  " ",
   "-LEAD PROGRAMMERS",
   "BILL KENDRICK,",
   "NEW BREED SOFTWARE",
   "DAVID BRUCE",
   "TIM HOLY",
-  "",
+  " ",
   "-ADDITIONAL CODE",
   "GLEN DITCHFIELD",
   "MICHAEL BEHRISCH",
@@ -56,34 +56,34 @@ char * credit_text[] = {
   "AHMED SAYED",
   "BRENDAN LUCHEN",
   "JESUS M. MAGER H.",
-  "",
+  " ",
   "-LEAD ARTIST",
   "SAM HART",
   "",
   "-ADDITIONAL ART",
   "BILL KENDRICK",
   "KENDRA SWANSON & LINNEA HOLY",
-  "",
+  " ",
   "-SOUND EFFECTS",
   "TBA",
-  "",
+  " ",
   "-MUSIC",
   "BEYOND THE HORIZON",
   "BY MYSTRA OF STONE ARTS, 1994",
-  "",
+  " ",
   "CCCP MAIN",
   "BY GROO OF CNCD, 1994",
-  "",
+  " ",
   "SOFT BRILLIANCE",
   "TJOPPBASS, 1994",
-  "",
+  " ",
   "-PACKAGERS",
   "JESSE ANDREWS",
   "HOLGER LEVSEN",
-  "",
+  " ",
   "-'TUX' THE PENGUIN CREATED BY",
   "LARRY EWING",
-  "",
+  " ",
   "-TESTERS",
   "PETE SALZMAN",
   "ST. CATHERINE ELEM., CINCINNATI, OH",
@@ -94,8 +94,8 @@ char * credit_text[] = {
   "OLD BONHOMME ELEMENTARY,",
   "ST. LOUIS, MO",
   "STEPHANIE CHAPIE & HOWARD NATHANSON",
-  "",
-  "",
+  " ",
+  " ",
   "-WEBSITE",
   "WWW.TUX4KIDS.COM",
   NULL
